Create and design new form for autoupdater install

--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -172,4 +172,22 @@
   <data name="bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="back_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\back_arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="install_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\install_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scroll_closed_res" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scroll_closed_res.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scroll_closed_res2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scroll_closed_res2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scroll_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scroll_open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uninstall_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uninstall_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
