--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -235,4 +235,10 @@
   <data name="save_button_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save_button_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="install_button2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\install_button2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="install_button_disabled2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\install_button_disabled2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
