Handle launching with DMMGamePlayerFastLauncher different. Added new form to set the shortcut of the fastlauncher and use that for launching the game.

--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -241,4 +241,16 @@
   <data name="install_button_disabled2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\install_button_disabled2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortcutadd_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutadd_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortcutadd_button_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutadd_button_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortcutremove_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutremove_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortcutremove_button_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutremove_button_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
