--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -253,4 +253,10 @@
   <data name="shortcutremove_button_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortcutremove_button_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="export_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\export_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="import_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\import_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
