--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -259,4 +259,37 @@
   <data name="import_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\import_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="defaults_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\defaults_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="export_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\export_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="import_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\import_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="install_button2_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\install_button2_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="remove_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\remove_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="save_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\save_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortcutadd_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutadd_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortcutremove_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortcutremove_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="start_hover_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\start_hover_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="uninstall_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uninstall_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
