--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -292,4 +292,7 @@
   <data name="uninstall_button_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\uninstall_button_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NunitoBold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NunitoBold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
