--- a/PriconneReTLInstaller/IEForm.resx
+++ b/PriconneReTLInstaller/IEForm.resx
@@ -126,4 +126,14 @@
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>271, 17</value>
   </metadata>
+  <data name="importExportDescriptionLabel.Text" xml:space="preserve">
+    <value>You can import / export the following user settings:
+- The state of the "Launch Game" checkbox
+- The state of the "Show Logs" checkbox
+- The state of the "Check for Installer Updates on Startup" option
+- The selected launcher
+- The list of ignored files
+- The shortcut to the DMMGamePlayerFastLauncher
+</value>
+  </data>
 </root>
