--- a/PriconneReTLInstaller/Properties/Resources.resx
+++ b/PriconneReTLInstaller/Properties/Resources.resx
@@ -331,4 +331,10 @@
   <data name="dlbutton_lit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dlbutton_lit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bg_enlarged" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bg_enlarged.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exclamation_t" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exclamation_t.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
